--- a/HireUP 2.0/web/index.html
+++ b/HireUP 2.0/web/index.html
@@ -1,78 +1,78 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 
-<head>
-	<meta charset="UTF-8" />
-	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<link rel="stylesheet" href="./css/index.css" />
-	<link rel="stylesheet" href="./css/navbar.css" />
-	<link rel="shortcut icon" href="./img/logo.png" type="image/x-icon" />
-	<script src="https://kit.fontawesome.com/1f168297b1.js" crossorigin="anonymous"></script>
-	<title>HireUp - Home...</title>
-</head>
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="./css/index.css" />
+        <link rel="stylesheet" href="./css/navbar.css" />
+        <link rel="shortcut icon" href="./img/logo.png" type="image/x-icon" />
+        <script src="https://kit.fontawesome.com/1f168297b1.js" crossorigin="anonymous"></script>
+        <title>HireUp - Home...</title>
+    </head>
 
-<body>
-	<header>
-		<div class="navbar">
-			<div class="left-nav">
-				<a href="#" class="brand"><img src="img/logo.png" alt="Logo" class="logo" height="30" /></a>
-			</div>
+    <body>
+        <header>
+            <div class="navbar">
+                <div class="left-nav">
+                    <a href="#" class="brand"><img src="img/logo.png" alt="Logo" class="logo" height="30" /></a>
+                </div>
 
-			<div class="nav-middle">
-				<nav class="nav-menu">
-					<a href="./index.html" class="nav-link">Home</a>
-					<a href="./pages/empresa.jsp" class="nav-link">Empresas</a>
-					<a href="./pages/browse.jsp" class="nav-link">Vagas</a>
-					<a href="./pages/subEmpresa.html" class="nav-link">Submeter Empresa</a>
-				</nav>
-			</div>
+                <div class="nav-middle">
+                    <nav class="nav-menu">
+                        <a href="./index.html" class="nav-link">Home</a>
+                        <a href="./pages/empresa.jsp" class="nav-link">Empresas</a>
+                        <a href="./pages/browse.jsp" class="nav-link">Vagas</a>
+                        <a href="./pages/subEmpresa.html" class="nav-link">Submeter Empresa</a>
+                    </nav>
+                </div>
 
-			<div>
-				<nav class="right-nav">
-					<a href="Pages - Empresas/subEmpresa.html" class="nav-link">Para Empregadores</a>
-					<form action="./pages/login.jsp">
-						<button class="btn-primary">Log in</button>
-					</form>
-				</nav>
-			</div>
-		</div>
-	</header>
-	<main>
-		<section class="left-side">
-			<div class="new">
-				<p>New</p>
-				<p>Fique conectado para obter os os melhores trabalhos</p>
-			</div>
-			<div class="find">
-				<h1>Encontre os</h1>
-				<h1>trabalhos mais interessantes do mercado</h1>
-			</div>
-			<div class="left-content">
-				<p>
-					Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-					Mauris rhoncus pharetra cursus. Suspendisse sodales porta leo,
-					ac placerat ex pretium quis.
-				</p>
-			</div>
-			<div class="search">
-				<form action="./pages/RedirecionarPesquisa.jsp">
-					<i class="fa-solid fa-magnifying-glass"></i>
-					<input type="search" name="pesquisa" id="" placeholder="Pesquise..." />
-					<button>Search</button>
-				</form>
-			</div>
-		</section>
-		<section class="right-side">
-			<div class="image-height">
-				<figure>
-					<img src="https://assets.website-files.com/63337525695d8ba70ab44222/6358b2bbb9fdec69f1b1c7a4_adam-rhodes-ep5lX958f7E-unsplash-p-2000.webp"
-						alt="" />
-                                        <figcaption> <a href="./Perfil da Empresa/index.jsp">O mais alto que você possa ir.</a> </figcaption>
-				</figure>
-			</div>
-		</section>
-	</main>
-</body>
+                <div>
+                    <nav class="right-nav">
+                        <a href="Pages - Empresas/subEmpresa.html" class="nav-link">Para Empregadores</a>
+                        <form action="./pages/login.jsp">
+                            <button class="btn-primary">Log in</button>
+                        </form>
+                    </nav>
+                </div>
+            </div>
+        </header>
+        <main>
+            <section class="left-side">
+                <div class="new">
+                    <p>New</p>
+                    <p>Fique conectado para obter os os melhores trabalhos</p>
+                </div>
+                <div class="find">
+                    <h1>Encontre os</h1>
+                    <h1>trabalhos mais interessantes do mercado</h1>
+                </div>
+                <div class="left-content">
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                        Mauris rhoncus pharetra cursus. Suspendisse sodales porta leo,
+                        ac placerat ex pretium quis.
+                    </p>
+                </div>
+                <div class="search">
+                    <form action="./pages/RedirecionarPesquisa.jsp">
+                        <i class="fa-solid fa-magnifying-glass"></i>
+                        <input type="search" name="pesquisa" id="" placeholder="Pesquise..." />
+                        <button>Search</button>
+                    </form>
+                </div>
+            </section>
+            <section class="right-side">
+                <div class="image-height">
+                    <figure>
+                        <img src="https://assets.website-files.com/63337525695d8ba70ab44222/6358b2bbb9fdec69f1b1c7a4_adam-rhodes-ep5lX958f7E-unsplash-p-2000.webp"
+                             alt="" />
+                        <figcaption> <a href="./Perfil do usuario/index.jsp">O mais alto que você possa ir.</a> </figcaption>
+                    </figure>
+                </div>
+            </section>
+        </main>
+    </body>
 
 </html>
