--- a/HireUP 2.0/web/index.html
+++ b/HireUP 2.0/web/index.html
@@ -28,51 +28,51 @@
                     </nav>
                 </div>
 
-                <div>
-                    <nav class="right-nav">
-                        <a href="Pages - Empresas/subEmpresa.html" class="nav-link">Para Empregadores</a>
-                        <form action="./pages/login.jsp">
-                            <button class="btn-primary">Log in</button>
-                        </form>
-                    </nav>
-                </div>
-            </div>
-        </header>
-        <main>
-            <section class="left-side">
-                <div class="new">
-                    <p>New</p>
-                    <p>Fique conectado para obter os os melhores trabalhos</p>
-                </div>
-                <div class="find">
-                    <h1>Encontre os</h1>
-                    <h1>trabalhos mais interessantes do mercado</h1>
-                </div>
-                <div class="left-content">
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                        Mauris rhoncus pharetra cursus. Suspendisse sodales porta leo,
-                        ac placerat ex pretium quis.
-                    </p>
-                </div>
-                <div class="search">
-                    <form action="./pages/RedirecionarPesquisa.jsp">
-                        <i class="fa-solid fa-magnifying-glass"></i>
-                        <input type="search" name="pesquisa" id="" placeholder="Pesquise..." />
-                        <button>Search</button>
-                    </form>
-                </div>
-            </section>
-            <section class="right-side">
-                <div class="image-height">
-                    <figure>
-                        <img src="https://assets.website-files.com/63337525695d8ba70ab44222/6358b2bbb9fdec69f1b1c7a4_adam-rhodes-ep5lX958f7E-unsplash-p-2000.webp"
-                             alt="" />
-                        <figcaption> <a href="./Perfil do usuario/index.jsp">O mais alto que você possa ir.</a> </figcaption>
-                    </figure>
-                </div>
-            </section>
-        </main>
-    </body>
+			<div>
+				<nav class="right-nav">
+					<a href="./Pages - Empresas/signupEmpresa.html" class="nav-link">Para Empregadores</a>
+					<form action="./pages/login.jsp">
+						<button class="btn-primary">Log in</button>
+					</form>
+				</nav>
+			</div>
+		</div>
+	</header>
+	<main>
+		<section class="left-side">
+			<div class="new">
+				<p>New</p>
+				<p>Fique conectado para obter os os melhores trabalhos</p>
+			</div>
+			<div class="find">
+				<h1>Encontre os</h1>
+				<h1>trabalhos mais interessantes do mercado</h1>
+			</div>
+			<div class="left-content">
+				<p>
+					Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+					Mauris rhoncus pharetra cursus. Suspendisse sodales porta leo,
+					ac placerat ex pretium quis.
+				</p>
+			</div>
+			<div class="search">
+				<form action="./pages/RedirecionarPesquisa.jsp">
+					<i class="fa-solid fa-magnifying-glass"></i>
+					<input type="search" name="pesquisa" id="" placeholder="Pesquise..." />
+					<button>Search</button>
+				</form>
+			</div>
+		</section>
+		<section class="right-side">
+			<div class="image-height">
+				<figure>
+					<img src="https://assets.website-files.com/63337525695d8ba70ab44222/6358b2bbb9fdec69f1b1c7a4_adam-rhodes-ep5lX958f7E-unsplash-p-2000.webp"
+						alt="" />
+                                        <figcaption> <a href="./Perfil da Empresa/index.jsp">O mais alto que você possa ir.</a> </figcaption>
+				</figure>
+			</div>
+		</section>
+	</main>
+</body>
 
 </html>
