--- a/HireUP 2.0/web/pages/signup.html
+++ b/HireUP 2.0/web/pages/signup.html
@@ -41,27 +41,27 @@
 				<form action="signup.jsp" accept-charset="UTF-8" method="post">
 					<input type="text" name="nome" maxlength="120" placeholder="Nome *" required
 						class="form-field w-input">
-					<input type="text" name="nome" maxlength="120" placeholder="Apelido *" required
+					<input type="text" name="apelido" maxlength="120" placeholder="Apelido *" required
 						class="form-field w-input">
 					<input type="email" name="email" maxlength="120" placeholder="Email *" required
 						class="form-field w-input">
 					<input type="password" name="senha" id="senha" maxlength="20" class="form-field w-input"
 						placeholder="Senha *" required>
-					<input type="text" name="nome" maxlength="120" placeholder="Formação " class="form-field w-input">
-					<input type="text" name="nome" maxlength="120" placeholder="Localização *" required
+					<input type="text" name="formacao" maxlength="120" placeholder="Formação " class="form-field w-input" required>
+					<input type="text" name="localizacao" maxlength="120" placeholder="Localização *" required
 						class="form-field w-input">
-					<select name="" id="sectores">
+					<select name="setor" id="sectores" required>
 						<option value="" disabled selected>Selecione o seu sector de trabalho </option>
-						<option value="">Tecnologias de Informacao</option>
-						<option value="">Marketing</option>
-						<option value="">Telecomunicao</option>
-						<option value="">Administracao</option>
-						<option value="">Construcao</option>
-						<option value="">Saude</option>
-						<option value="">Industrial</option>
-						<option value="">Multimedia</option>
-						<option value="">Seguranca</option>
-						<option value="">Outro</option>
+						<option value="Tecnologias de Informacao">Tecnologias de Informacao</option>
+						<option value="Marketing">Marketing</option>
+						<option value="Telecomunicao">Telecomunicao</option>
+						<option value="Administracao">Administracao</option>
+						<option value="Construcao">Construcao</option>
+						<option value="Saude">Saude</option>
+						<option value="Industrial">Industrial</option>
+						<option value="Multimedia">Multimedia</option>
+						<option value="Seguranca">Seguranca</option>
+						<option value="Outro">Outro</option>
 					</select>
 					<br><br>
 					<input type="submit" value="Crie uma Conta" data-wait="Por favor aguarde..."
