--- a/HireUP 2.0/web/pages/login.html
+++ b/HireUP 2.0/web/pages/login.html
@@ -22,15 +22,17 @@
         <a href="../index.html" class="nav-link">Home</a>
         <a href="./empresa.jsp" class="nav-link">Empresas</a>
         <a href="./browse.jsp" class="nav-link">Pesquise</a>
-        <a href="./subEmpresa.html" class="nav-link">Submeter Empresa</a>
+        <a href="#" class="nav-link">Vagas</a>
       </nav>
     </div>
 
 
     <div>
       <nav class="right-nav">
-        <a href="./submitJob.jsp" class="nav-link">Poste um Emprego</a>
-      <button class="btn-primary">Log in</button>
+        <a href="./submitJob.jsp" class="nav-link">Para empregadores</a>
+        <form action="./signup.html">
+          <button class="btn-primary">Signup</button>
+        </form>
       </nav>
       
     </div>
