--- a/HireUP 2.0/web/Pages - Empresas/signupEmpresa.html
+++ b/HireUP 2.0/web/Pages - Empresas/signupEmpresa.html
@@ -56,15 +56,15 @@
 
 					<select name="setor" class="form-field w-input">
 						<option value="" disabled selected>Selecione o Sector</option>
-						<option value="Tecnologias de Informacao">Tecnologias de Informacao</option>
+						<option value="Tecnologias de Informacao">Tecnologias de Informação</option>
 						<option value="Marketing">Marketing</option>
-						<option value="Telecomunicao">Telecomunicao</option>
-						<option value="Administracao">Administracao</option>
-						<option value="Construcao">Construcao</option>
-						<option value="Saude">Saude</option>
+						<option value="Telecomunicao">Telecomunição</option>
+						<option value="Administracao">Administração</option>
+						<option value="Construcao">Construção</option>
+						<option value="Saude">Saúde</option>
 						<option value="Industrial">Industrial</option>
 						<option value="Multimedia">Multimedia</option>
-						<option value="Seguranca">Seguranca</option>
+						<option value="Seguranca">Segurança</option>
 						<option value="Outro">Outro</option>
 					</select>
 
