--- a/HireUP 2.0/web/pages/signup.html
+++ b/HireUP 2.0/web/pages/signup.html
@@ -35,8 +35,8 @@
 		<div class="left">
 			<div class="form-block">
 				<div class="form-title">
-					<h3>Sign up</h3>
-					<p>Registe-se e comece a se candidatar a empregos!</p>
+					<h3>Registre-se</h3>
+					<p>Registre-se e comece a se candidatar a empregos!</p>
 				</div>
 				<form action="signup.jsp" accept-charset="UTF-8" method="post">
 					<input type="text" name="nome" maxlength="120" placeholder="Nome *" required
@@ -76,9 +76,9 @@
 
 		<div class="right">
 			<div class="content-block">
-				<h1>Vamos criar a sua conta.</h1>
+				<!-- <h1>Vamos criar a sua conta.</h1> -->
 				<div>
-					<h2>Adicionar um texto aqui mais tarde</h2>
+					<!-- <h2>Adicionar um texto aqui mais tarde</h2> -->
 				</div>
 			</div>
 		</div>
