As coisas estao a comecar a animar

--- a/HireUP 2.0/web/index.html
+++ b/HireUP 2.0/web/index.html
@@ -24,13 +24,12 @@
                         <a href="./index.html" class="nav-link">Home</a>
                         <a href="./pages/empresa.jsp" class="nav-link">Empresas</a>
                         <a href="./pages/browse.jsp" class="nav-link">Vagas</a>
-                        <a href="./pages/subEmpresa.html" class="nav-link">Submeter Empresa</a>
                     </nav>
                 </div>
 
                 <div>
                     <nav class="right-nav">
-                        <a href="./Pages - Empresas/signupEmpresa.html" class="nav-link">Para Empregadores</a>
+                        <a href="./Pages - Empresas/signupEmpresa.jsp" class="nav-link">Para Empregadores</a>
                         <form action="./pages/login.jsp">
                             <button class="btn-primary">Log in</button>
                         </form>
