--- a/HireUP 2.0/web/pages/navbar.html
+++ b/HireUP 2.0/web/pages/navbar.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Document</title>
+        <title>header</title>
     </head>
 
     <body>
@@ -18,8 +18,8 @@
                 <nav class="nav-menu">
                     <a href="../index.html" class="nav-link">Home</a>
                     <a href="./empresa.jsp" class="nav-link">Empresas</a>
-                    <a href="./browse.jsp" class="nav-link">Pesquise</a>
-                    <a href="./subEmpresa.html" class="nav-link">Submeter Empresa</a>
+                    <a href="./browse.jsp" class="nav-link">Empregos</a>
+                    <a href="./subEmpresa.html" class="nav-link">Candidaturas</a>
                 </nav>
             </div>
 
