--- a/HireUP 2.0/web/index.html
+++ b/HireUP 2.0/web/index.html
@@ -62,7 +62,7 @@
                 <div class="collapse navbar-collapse" id="navbarText">
                     <ul class="navbar-nav  m-auto mb-lg-0">
                         <li class="nav-item">
-                            <a class="btn btn-middle-link m-2" href="pages/index.html">Home</a>
+                            <a class="btn btn-middle-link m-2" href="index.html">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="btn btn-middle-link m-2" href="pages/empresa.jsp">Empresas</a>
@@ -74,7 +74,7 @@
                             <a class="btn btn-middle-link m-2" href="">Candidaturas</a>
                         </li>
                         <li class="nav-item">
-                            <a class="btn btn-middle-link m-2" href="Pages - Empresas/signupEmpresa.html">Para Empregadores</a>
+                            <a class="btn btn-middle-link m-2" href="Pages - Empresas/login_empresa.jsp">Para Empregadores</a>
 
                         </li>
 
