--- a/HireUP 2.0/web/pages/login.html
+++ b/HireUP 2.0/web/pages/login.html
@@ -77,7 +77,7 @@
                             <a class="btn btn-middle-link m-2" href="">Candidaturas</a>
                         </li>
                         <li class="nav-item">
-                            <a class="btn btn-middle-link m-2" href="../Pages - Empresas/signupEmpresa.html">Para Empregadores</a>
+                            <a class="btn btn-middle-link m-2" href="../Pages - Empresas/login_empresa.jsp">Para Empregadores</a>
 
                         </li>
 
