--- a/HireUP 2.0/web/pages/login.html
+++ b/HireUP 2.0/web/pages/login.html
@@ -65,7 +65,7 @@
                 <div class="collapse navbar-collapse" id="navbarText">
                     <ul class="navbar-nav  m-auto mb-lg-0">
                         <li class="nav-item">
-                            <a class="btn btn-middle-link m-2" href="../index.html">Home</a>
+                            <a class="btn btn-middle-link m-2" href="../index.jsp">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="btn btn-middle-link m-2" href="./empresa.jsp">Empresas</a>
